amara/xslt/xpatterns/parser.output
Grammar

  1    start: Pattern

  2    Pattern: LocationPathPattern
  3           | Pattern '|' LocationPathPattern

  4    LocationPathPattern: '/'
  5                       | '/' RelativePathPattern
  6                       | IdKeyPattern
  7                       | IdKeyPattern '/' RelativePathPattern
  8                       | IdKeyPattern DOUBLE_SLASH RelativePathPattern
  9                       | DOUBLE_SLASH RelativePathPattern
  10                      | RelativePathPattern

  11   IdKeyPattern: ID_FUNCTION '(' Literal ')'
  12               | KEY_FUNCTION '(' Literal ',' Literal ')'

  13   RelativePathPattern: StepPattern
  14                      | RelativePathPattern '/' StepPattern
  15                      | RelativePathPattern DOUBLE_SLASH StepPattern

  16   StepPattern: ChildOrAttributeAxisSpecifier NodeTest
  17              | ChildOrAttributeAxisSpecifier NodeTest Predicate.list

  18   ChildOrAttributeAxisSpecifier: /* empty */
  19                                | '@'
  20                                | CHILD_AXIS DOUBLE_COLON
  21                                | ATTRIBUTE_AXIS DOUBLE_COLON

  22   LocationPath: RelativeLocationPath
  23               | AbsoluteLocationPath

  24   AbsoluteLocationPath: '/'
  25                       | '/' RelativeLocationPath
  26                       | AbbreviatedAbsoluteLocationPath

  27   RelativeLocationPath: Step
  28                       | RelativeLocationPath '/' Step
  29                       | AbbreviatedRelativeLocationPath

  30   Step: AxisSpecifier NodeTest
  31       | AxisSpecifier NodeTest Predicate.list
  32       | AbbreviatedStep

  33   Predicate.list: Predicate
  34                 | Predicate.list Predicate

  35   AxisSpecifier: AxisName DOUBLE_COLON
  36                | AbbreviatedAxisSpecifier

  37   NodeTest: NameTest
  38           | NodeType '(' ')'
  39           | NodeType '(' Literal ')'

  40   Predicate: '[' PredicateExpr ']'

  41   PredicateExpr: Expr

  42   AbbreviatedAbsoluteLocationPath: DOUBLE_SLASH RelativeLocationPath

  43   AbbreviatedRelativeLocationPath: RelativeLocationPath DOUBLE_SLASH Step

  44   AbbreviatedStep: '.'
  45                  | DOUBLE_DOT

  46   AbbreviatedAxisSpecifier: '@'
  47                           | /* empty */

  48   Expr: OrExpr

  49   PrimaryExpr: VariableReference
  50              | '(' Expr ')'
  51              | Literal
  52              | Number
  53              | FunctionCall

  54   FunctionCall: FunctionName '(' ')'
  55               | FunctionName '(' Argument.list ')'

  56   Argument.list: Argument
  57                | Argument.list ',' Argument

  58   Argument: Expr

  59   UnionExpr: PathExpr
  60            | UnionExpr '|' PathExpr

  61   PathExpr: LocationPath
  62           | FilterExpr
  63           | FilterExpr '/' RelativeLocationPath
  64           | FilterExpr DOUBLE_SLASH RelativeLocationPath

  65   FilterExpr: PrimaryExpr
  66             | PrimaryExpr Predicate.list

  67   OrExpr: AndExpr
  68         | OrExpr OR_OP AndExpr

  69   AndExpr: EqualityExpr
  70          | AndExpr AND_OP EqualityExpr

  71   EqualityExpr: RelationalExpr
  72               | EqualityExpr EQUALITY_OP RelationalExpr

  73   RelationalExpr: AdditiveExpr
  74                 | RelationalExpr RELATIONAL_OP AdditiveExpr

  75   AdditiveExpr: MultiplicativeExpr
  76               | AdditiveExpr '+' MultiplicativeExpr
  77               | AdditiveExpr '-' MultiplicativeExpr

  78   MultiplicativeExpr: UnaryExpr
  79                     | MultiplicativeExpr MULTIPLICATIVE_OP UnaryExpr

  80   UnaryExpr: UnionExpr
  81            | '-' UnionExpr


Terminals, with rules where they appear

<EOF> (-1)
'(' (40) 11 12 38 39 50 54 55
')' (41) 11 12 38 39 50 54 55
'+' (43) 76
',' (44) 12 57
'-' (45) 77 81
'.' (46) 44
'/' (47) 4 5 7 14 24 25 28 63
'@' (64) 19 46
'[' (91) 40
']' (93) 40
'|' (124) 3 60
error (256)
CHILD_AXIS (257) 20
ATTRIBUTE_AXIS (258) 21
ID_FUNCTION (259) 11
KEY_FUNCTION (260) 12
Literal (261) 11 12 39 51
Number (262) 52
VariableReference (263) 49
NameTest (264) 37
FunctionName (265) 54 55
NodeType (266) 38 39
AxisName (267) 35
OR_OP (268) 68
AND_OP (269) 70
EQUALITY_OP (270) 72
RELATIONAL_OP (271) 74
MULTIPLICATIVE_OP (272) 79
DOUBLE_DOT (273) 45
DOUBLE_COLON (274) 20 21 35
DOUBLE_SLASH (275) 8 9 15 42 43 64


Nonterminals, with rules where they appear

start (33)
    on left: 1
Pattern (34)
    on left: 2 3, on right: 1 3
LocationPathPattern (35)
    on left: 4 5 6 7 8 9 10, on right: 2 3
IdKeyPattern (36)
    on left: 11 12, on right: 6 7 8
RelativePathPattern (37)
    on left: 13 14 15, on right: 5 7 8 9 10 14 15
StepPattern (38)
    on left: 16 17, on right: 13 14 15
ChildOrAttributeAxisSpecifier (39)
    on left: 18 19 20 21, on right: 16 17
LocationPath (40)
    on left: 22 23, on right: 61
AbsoluteLocationPath (41)
    on left: 24 25 26, on right: 23
RelativeLocationPath (42)
    on left: 27 28 29, on right: 22 25 28 42 43 63 64
Step (43)
    on left: 30 31 32, on right: 27 28 43
Predicate.list (44)
    on left: 33 34, on right: 17 31 34 66
AxisSpecifier (45)
    on left: 35 36, on right: 30 31
NodeTest (46)
    on left: 37 38 39, on right: 16 17 30 31
Predicate (47)
    on left: 40, on right: 33 34
PredicateExpr (48)
    on left: 41, on right: 40
AbbreviatedAbsoluteLocationPath (49)
    on left: 42, on right: 26
AbbreviatedRelativeLocationPath (50)
    on left: 43, on right: 29
AbbreviatedStep (51)
    on left: 44 45, on right: 32
AbbreviatedAxisSpecifier (52)
    on left: 46 47, on right: 36
Expr (53)
    on left: 48, on right: 41 50 58
PrimaryExpr (54)
    on left: 49 50 51 52 53, on right: 65 66
FunctionCall (55)
    on left: 54 55, on right: 53
Argument.list (56)
    on left: 56 57, on right: 55 57
Argument (57)
    on left: 58, on right: 56 57
UnionExpr (58)
    on left: 59 60, on right: 60 80 81
PathExpr (59)
    on left: 61 62 63 64, on right: 59 60
FilterExpr (60)
    on left: 65 66, on right: 62 63 64
OrExpr (61)
    on left: 67 68, on right: 48 68
AndExpr (62)
    on left: 69 70, on right: 67 68 70
EqualityExpr (63)
    on left: 71 72, on right: 69 70 72
RelationalExpr (64)
    on left: 73 74, on right: 71 72 74
AdditiveExpr (65)
    on left: 75 76 77, on right: 73 74 76 77
MultiplicativeExpr (66)
    on left: 78 79, on right: 75 76 77 79
UnaryExpr (67)
    on left: 80 81, on right: 78 79


state 0

    CHILD_AXIS	shift, and go to state 1
    ATTRIBUTE_AXIS	shift, and go to state 2
    ID_FUNCTION	shift, and go to state 3
    KEY_FUNCTION	shift, and go to state 4
    DOUBLE_SLASH	shift, and go to state 5
    '/' 	shift, and go to state 6
    '@' 	shift, and go to state 7

    $default	reduce using rule 18 (ChildOrAttributeAxisSpecifier)

    start	go to state 124
    Pattern	go to state 8
    LocationPathPattern	go to state 9
    IdKeyPattern	go to state 10
    RelativePathPattern	go to state 11
    StepPattern	go to state 12
    ChildOrAttributeAxisSpecifier	go to state 13



state 1

    ChildOrAttributeAxisSpecifier  ->  CHILD_AXIS . DOUBLE_COLON   (rule 20)

    DOUBLE_COLON	shift, and go to state 14



state 2

    ChildOrAttributeAxisSpecifier  ->  ATTRIBUTE_AXIS . DOUBLE_COLON   (rule 21)

    DOUBLE_COLON	shift, and go to state 15



state 3

    IdKeyPattern  ->  ID_FUNCTION . '(' Literal ')'   (rule 11)

    '(' 	shift, and go to state 16



state 4

    IdKeyPattern  ->  KEY_FUNCTION . '(' Literal ',' Literal ')'   (rule 12)

    '(' 	shift, and go to state 17



state 5

    LocationPathPattern  ->  DOUBLE_SLASH . RelativePathPattern   (rule 9)

    CHILD_AXIS	shift, and go to state 1
    ATTRIBUTE_AXIS	shift, and go to state 2
    '@' 	shift, and go to state 7

    $default	reduce using rule 18 (ChildOrAttributeAxisSpecifier)

    RelativePathPattern	go to state 18
    StepPattern	go to state 12
    ChildOrAttributeAxisSpecifier	go to state 13



state 6

    LocationPathPattern  ->  '/' .   (rule 4)
    LocationPathPattern  ->  '/' . RelativePathPattern   (rule 5)

    CHILD_AXIS	shift, and go to state 1
    ATTRIBUTE_AXIS	shift, and go to state 2
    '@' 	shift, and go to state 7

    NameTest	reduce using rule 18 (ChildOrAttributeAxisSpecifier)
    NodeType	reduce using rule 18 (ChildOrAttributeAxisSpecifier)
    $default	reduce using rule 4 (LocationPathPattern)

    RelativePathPattern	go to state 19
    StepPattern	go to state 12
    ChildOrAttributeAxisSpecifier	go to state 13



state 7

    ChildOrAttributeAxisSpecifier  ->  '@' .   (rule 19)

    $default	reduce using rule 19 (ChildOrAttributeAxisSpecifier)



state 8

    start  ->  Pattern .   (rule 1)
    Pattern  ->  Pattern . '|' LocationPathPattern   (rule 3)

    '|' 	shift, and go to state 20

    $default	reduce using rule 1 (start)



state 9

    Pattern  ->  LocationPathPattern .   (rule 2)

    $default	reduce using rule 2 (Pattern)



state 10

    LocationPathPattern  ->  IdKeyPattern .   (rule 6)
    LocationPathPattern  ->  IdKeyPattern . '/' RelativePathPattern   (rule 7)
    LocationPathPattern  ->  IdKeyPattern . DOUBLE_SLASH RelativePathPattern   (rule 8)

    DOUBLE_SLASH	shift, and go to state 21
    '/' 	shift, and go to state 22

    $default	reduce using rule 6 (LocationPathPattern)



state 11

    LocationPathPattern  ->  RelativePathPattern .   (rule 10)
    RelativePathPattern  ->  RelativePathPattern . '/' StepPattern   (rule 14)
    RelativePathPattern  ->  RelativePathPattern . DOUBLE_SLASH StepPattern   (rule 15)

    DOUBLE_SLASH	shift, and go to state 23
    '/' 	shift, and go to state 24

    $default	reduce using rule 10 (LocationPathPattern)



state 12

    RelativePathPattern  ->  StepPattern .   (rule 13)

    $default	reduce using rule 13 (RelativePathPattern)



state 13

    StepPattern  ->  ChildOrAttributeAxisSpecifier . NodeTest   (rule 16)
    StepPattern  ->  ChildOrAttributeAxisSpecifier . NodeTest Predicate.list   (rule 17)

    NameTest	shift, and go to state 25
    NodeType	shift, and go to state 26

    NodeTest	go to state 27



state 14

    ChildOrAttributeAxisSpecifier  ->  CHILD_AXIS DOUBLE_COLON .   (rule 20)

    $default	reduce using rule 20 (ChildOrAttributeAxisSpecifier)



state 15

    ChildOrAttributeAxisSpecifier  ->  ATTRIBUTE_AXIS DOUBLE_COLON .   (rule 21)

    $default	reduce using rule 21 (ChildOrAttributeAxisSpecifier)



state 16

    IdKeyPattern  ->  ID_FUNCTION '(' . Literal ')'   (rule 11)

    Literal	shift, and go to state 28



state 17

    IdKeyPattern  ->  KEY_FUNCTION '(' . Literal ',' Literal ')'   (rule 12)

    Literal	shift, and go to state 29



state 18

    LocationPathPattern  ->  DOUBLE_SLASH RelativePathPattern .   (rule 9)
    RelativePathPattern  ->  RelativePathPattern . '/' StepPattern   (rule 14)
    RelativePathPattern  ->  RelativePathPattern . DOUBLE_SLASH StepPattern   (rule 15)

    DOUBLE_SLASH	shift, and go to state 23
    '/' 	shift, and go to state 24

    $default	reduce using rule 9 (LocationPathPattern)



state 19

    LocationPathPattern  ->  '/' RelativePathPattern .   (rule 5)
    RelativePathPattern  ->  RelativePathPattern . '/' StepPattern   (rule 14)
    RelativePathPattern  ->  RelativePathPattern . DOUBLE_SLASH StepPattern   (rule 15)

    DOUBLE_SLASH	shift, and go to state 23
    '/' 	shift, and go to state 24

    $default	reduce using rule 5 (LocationPathPattern)



state 20

    Pattern  ->  Pattern '|' . LocationPathPattern   (rule 3)

    CHILD_AXIS	shift, and go to state 1
    ATTRIBUTE_AXIS	shift, and go to state 2
    ID_FUNCTION	shift, and go to state 3
    KEY_FUNCTION	shift, and go to state 4
    DOUBLE_SLASH	shift, and go to state 5
    '/' 	shift, and go to state 6
    '@' 	shift, and go to state 7

    $default	reduce using rule 18 (ChildOrAttributeAxisSpecifier)

    LocationPathPattern	go to state 30
    IdKeyPattern	go to state 10
    RelativePathPattern	go to state 11
    StepPattern	go to state 12
    ChildOrAttributeAxisSpecifier	go to state 13



state 21

    LocationPathPattern  ->  IdKeyPattern DOUBLE_SLASH . RelativePathPattern   (rule 8)

    CHILD_AXIS	shift, and go to state 1
    ATTRIBUTE_AXIS	shift, and go to state 2
    '@' 	shift, and go to state 7

    $default	reduce using rule 18 (ChildOrAttributeAxisSpecifier)

    RelativePathPattern	go to state 31
    StepPattern	go to state 12
    ChildOrAttributeAxisSpecifier	go to state 13



state 22

    LocationPathPattern  ->  IdKeyPattern '/' . RelativePathPattern   (rule 7)

    CHILD_AXIS	shift, and go to state 1
    ATTRIBUTE_AXIS	shift, and go to state 2
    '@' 	shift, and go to state 7

    $default	reduce using rule 18 (ChildOrAttributeAxisSpecifier)

    RelativePathPattern	go to state 32
    StepPattern	go to state 12
    ChildOrAttributeAxisSpecifier	go to state 13



state 23

    RelativePathPattern  ->  RelativePathPattern DOUBLE_SLASH . StepPattern   (rule 15)

    CHILD_AXIS	shift, and go to state 1
    ATTRIBUTE_AXIS	shift, and go to state 2
    '@' 	shift, and go to state 7

    $default	reduce using rule 18 (ChildOrAttributeAxisSpecifier)

    StepPattern	go to state 33
    ChildOrAttributeAxisSpecifier	go to state 13



state 24

    RelativePathPattern  ->  RelativePathPattern '/' . StepPattern   (rule 14)

    CHILD_AXIS	shift, and go to state 1
    ATTRIBUTE_AXIS	shift, and go to state 2
    '@' 	shift, and go to state 7

    $default	reduce using rule 18 (ChildOrAttributeAxisSpecifier)

    StepPattern	go to state 34
    ChildOrAttributeAxisSpecifier	go to state 13



state 25

    NodeTest  ->  NameTest .   (rule 37)

    $default	reduce using rule 37 (NodeTest)



state 26

    NodeTest  ->  NodeType . '(' ')'   (rule 38)
    NodeTest  ->  NodeType . '(' Literal ')'   (rule 39)

    '(' 	shift, and go to state 35



state 27

    StepPattern  ->  ChildOrAttributeAxisSpecifier NodeTest .   (rule 16)
    StepPattern  ->  ChildOrAttributeAxisSpecifier NodeTest . Predicate.list   (rule 17)

    '[' 	shift, and go to state 36

    $default	reduce using rule 16 (StepPattern)

    Predicate.list	go to state 37
    Predicate	go to state 38



state 28

    IdKeyPattern  ->  ID_FUNCTION '(' Literal . ')'   (rule 11)

    ')' 	shift, and go to state 39



state 29

    IdKeyPattern  ->  KEY_FUNCTION '(' Literal . ',' Literal ')'   (rule 12)

    ',' 	shift, and go to state 40



state 30

    Pattern  ->  Pattern '|' LocationPathPattern .   (rule 3)

    $default	reduce using rule 3 (Pattern)



state 31

    LocationPathPattern  ->  IdKeyPattern DOUBLE_SLASH RelativePathPattern .   (rule 8)
    RelativePathPattern  ->  RelativePathPattern . '/' StepPattern   (rule 14)
    RelativePathPattern  ->  RelativePathPattern . DOUBLE_SLASH StepPattern   (rule 15)

    DOUBLE_SLASH	shift, and go to state 23
    '/' 	shift, and go to state 24

    $default	reduce using rule 8 (LocationPathPattern)



state 32

    LocationPathPattern  ->  IdKeyPattern '/' RelativePathPattern .   (rule 7)
    RelativePathPattern  ->  RelativePathPattern . '/' StepPattern   (rule 14)
    RelativePathPattern  ->  RelativePathPattern . DOUBLE_SLASH StepPattern   (rule 15)

    DOUBLE_SLASH	shift, and go to state 23
    '/' 	shift, and go to state 24

    $default	reduce using rule 7 (LocationPathPattern)



state 33

    RelativePathPattern  ->  RelativePathPattern DOUBLE_SLASH StepPattern .   (rule 15)

    $default	reduce using rule 15 (RelativePathPattern)



state 34

    RelativePathPattern  ->  RelativePathPattern '/' StepPattern .   (rule 14)

    $default	reduce using rule 14 (RelativePathPattern)



state 35

    NodeTest  ->  NodeType '(' . ')'   (rule 38)
    NodeTest  ->  NodeType '(' . Literal ')'   (rule 39)

    Literal	shift, and go to state 41
    ')' 	shift, and go to state 42



state 36

    Predicate  ->  '[' . PredicateExpr ']'   (rule 40)

    Literal	shift, and go to state 43
    Number	shift, and go to state 44
    VariableReference	shift, and go to state 45
    FunctionName	shift, and go to state 46
    AxisName	shift, and go to state 47
    DOUBLE_DOT	shift, and go to state 48
    DOUBLE_SLASH	shift, and go to state 49
    '/' 	shift, and go to state 50
    '(' 	shift, and go to state 51
    '@' 	shift, and go to state 52
    '.' 	shift, and go to state 53
    '-' 	shift, and go to state 54

    $default	reduce using rule 47 (AbbreviatedAxisSpecifier)

    LocationPath	go to state 55
    AbsoluteLocationPath	go to state 56
    RelativeLocationPath	go to state 57
    Step	go to state 58
    AxisSpecifier	go to state 59
    PredicateExpr	go to state 60
    AbbreviatedAbsoluteLocationPath	go to state 61
    AbbreviatedRelativeLocationPath	go to state 62
    AbbreviatedStep	go to state 63
    AbbreviatedAxisSpecifier	go to state 64
    Expr	go to state 65
    PrimaryExpr	go to state 66
    FunctionCall	go to state 67
    UnionExpr	go to state 68
    PathExpr	go to state 69
    FilterExpr	go to state 70
    OrExpr	go to state 71
    AndExpr	go to state 72
    EqualityExpr	go to state 73
    RelationalExpr	go to state 74
    AdditiveExpr	go to state 75
    MultiplicativeExpr	go to state 76
    UnaryExpr	go to state 77



state 37

    StepPattern  ->  ChildOrAttributeAxisSpecifier NodeTest Predicate.list .   (rule 17)
    Predicate.list  ->  Predicate.list . Predicate   (rule 34)

    '[' 	shift, and go to state 36

    $default	reduce using rule 17 (StepPattern)

    Predicate	go to state 78



state 38

    Predicate.list  ->  Predicate .   (rule 33)

    $default	reduce using rule 33 (Predicate.list)



state 39

    IdKeyPattern  ->  ID_FUNCTION '(' Literal ')' .   (rule 11)

    $default	reduce using rule 11 (IdKeyPattern)



state 40

    IdKeyPattern  ->  KEY_FUNCTION '(' Literal ',' . Literal ')'   (rule 12)

    Literal	shift, and go to state 79



state 41

    NodeTest  ->  NodeType '(' Literal . ')'   (rule 39)

    ')' 	shift, and go to state 80



state 42

    NodeTest  ->  NodeType '(' ')' .   (rule 38)

    $default	reduce using rule 38 (NodeTest)



state 43

    PrimaryExpr  ->  Literal .   (rule 51)

    $default	reduce using rule 51 (PrimaryExpr)



state 44

    PrimaryExpr  ->  Number .   (rule 52)

    $default	reduce using rule 52 (PrimaryExpr)



state 45

    PrimaryExpr  ->  VariableReference .   (rule 49)

    $default	reduce using rule 49 (PrimaryExpr)



state 46

    FunctionCall  ->  FunctionName . '(' ')'   (rule 54)
    FunctionCall  ->  FunctionName . '(' Argument.list ')'   (rule 55)

    '(' 	shift, and go to state 81



state 47

    AxisSpecifier  ->  AxisName . DOUBLE_COLON   (rule 35)

    DOUBLE_COLON	shift, and go to state 82



state 48

    AbbreviatedStep  ->  DOUBLE_DOT .   (rule 45)

    $default	reduce using rule 45 (AbbreviatedStep)



state 49

    AbbreviatedAbsoluteLocationPath  ->  DOUBLE_SLASH . RelativeLocationPath   (rule 42)

    AxisName	shift, and go to state 47
    DOUBLE_DOT	shift, and go to state 48
    '@' 	shift, and go to state 52
    '.' 	shift, and go to state 53

    $default	reduce using rule 47 (AbbreviatedAxisSpecifier)

    RelativeLocationPath	go to state 83
    Step	go to state 58
    AxisSpecifier	go to state 59
    AbbreviatedRelativeLocationPath	go to state 62
    AbbreviatedStep	go to state 63
    AbbreviatedAxisSpecifier	go to state 64



state 50

    AbsoluteLocationPath  ->  '/' .   (rule 24)
    AbsoluteLocationPath  ->  '/' . RelativeLocationPath   (rule 25)

    AxisName	shift, and go to state 47
    DOUBLE_DOT	shift, and go to state 48
    '@' 	shift, and go to state 52
    '.' 	shift, and go to state 53

    NameTest	reduce using rule 47 (AbbreviatedAxisSpecifier)
    NodeType	reduce using rule 47 (AbbreviatedAxisSpecifier)
    $default	reduce using rule 24 (AbsoluteLocationPath)

    RelativeLocationPath	go to state 84
    Step	go to state 58
    AxisSpecifier	go to state 59
    AbbreviatedRelativeLocationPath	go to state 62
    AbbreviatedStep	go to state 63
    AbbreviatedAxisSpecifier	go to state 64



state 51

    PrimaryExpr  ->  '(' . Expr ')'   (rule 50)

    Literal	shift, and go to state 43
    Number	shift, and go to state 44
    VariableReference	shift, and go to state 45
    FunctionName	shift, and go to state 46
    AxisName	shift, and go to state 47
    DOUBLE_DOT	shift, and go to state 48
    DOUBLE_SLASH	shift, and go to state 49
    '/' 	shift, and go to state 50
    '(' 	shift, and go to state 51
    '@' 	shift, and go to state 52
    '.' 	shift, and go to state 53
    '-' 	shift, and go to state 54

    $default	reduce using rule 47 (AbbreviatedAxisSpecifier)

    LocationPath	go to state 55
    AbsoluteLocationPath	go to state 56
    RelativeLocationPath	go to state 57
    Step	go to state 58
    AxisSpecifier	go to state 59
    AbbreviatedAbsoluteLocationPath	go to state 61
    AbbreviatedRelativeLocationPath	go to state 62
    AbbreviatedStep	go to state 63
    AbbreviatedAxisSpecifier	go to state 64
    Expr	go to state 85
    PrimaryExpr	go to state 66
    FunctionCall	go to state 67
    UnionExpr	go to state 68
    PathExpr	go to state 69
    FilterExpr	go to state 70
    OrExpr	go to state 71
    AndExpr	go to state 72
    EqualityExpr	go to state 73
    RelationalExpr	go to state 74
    AdditiveExpr	go to state 75
    MultiplicativeExpr	go to state 76
    UnaryExpr	go to state 77



state 52

    AbbreviatedAxisSpecifier  ->  '@' .   (rule 46)

    $default	reduce using rule 46 (AbbreviatedAxisSpecifier)



state 53

    AbbreviatedStep  ->  '.' .   (rule 44)

    $default	reduce using rule 44 (AbbreviatedStep)



state 54

    UnaryExpr  ->  '-' . UnionExpr   (rule 81)

    Literal	shift, and go to state 43
    Number	shift, and go to state 44
    VariableReference	shift, and go to state 45
    FunctionName	shift, and go to state 46
    AxisName	shift, and go to state 47
    DOUBLE_DOT	shift, and go to state 48
    DOUBLE_SLASH	shift, and go to state 49
    '/' 	shift, and go to state 50
    '(' 	shift, and go to state 51
    '@' 	shift, and go to state 52
    '.' 	shift, and go to state 53

    $default	reduce using rule 47 (AbbreviatedAxisSpecifier)

    LocationPath	go to state 55
    AbsoluteLocationPath	go to state 56
    RelativeLocationPath	go to state 57
    Step	go to state 58
    AxisSpecifier	go to state 59
    AbbreviatedAbsoluteLocationPath	go to state 61
    AbbreviatedRelativeLocationPath	go to state 62
    AbbreviatedStep	go to state 63
    AbbreviatedAxisSpecifier	go to state 64
    PrimaryExpr	go to state 66
    FunctionCall	go to state 67
    UnionExpr	go to state 86
    PathExpr	go to state 69
    FilterExpr	go to state 70



state 55

    PathExpr  ->  LocationPath .   (rule 61)

    $default	reduce using rule 61 (PathExpr)



state 56

    LocationPath  ->  AbsoluteLocationPath .   (rule 23)

    $default	reduce using rule 23 (LocationPath)



state 57

    LocationPath  ->  RelativeLocationPath .   (rule 22)
    RelativeLocationPath  ->  RelativeLocationPath . '/' Step   (rule 28)
    AbbreviatedRelativeLocationPath  ->  RelativeLocationPath . DOUBLE_SLASH Step   (rule 43)

    DOUBLE_SLASH	shift, and go to state 87
    '/' 	shift, and go to state 88

    $default	reduce using rule 22 (LocationPath)



state 58

    RelativeLocationPath  ->  Step .   (rule 27)

    $default	reduce using rule 27 (RelativeLocationPath)



state 59

    Step  ->  AxisSpecifier . NodeTest   (rule 30)
    Step  ->  AxisSpecifier . NodeTest Predicate.list   (rule 31)

    NameTest	shift, and go to state 25
    NodeType	shift, and go to state 26

    NodeTest	go to state 89



state 60

    Predicate  ->  '[' PredicateExpr . ']'   (rule 40)

    ']' 	shift, and go to state 90



state 61

    AbsoluteLocationPath  ->  AbbreviatedAbsoluteLocationPath .   (rule 26)

    $default	reduce using rule 26 (AbsoluteLocationPath)



state 62

    RelativeLocationPath  ->  AbbreviatedRelativeLocationPath .   (rule 29)

    $default	reduce using rule 29 (RelativeLocationPath)



state 63

    Step  ->  AbbreviatedStep .   (rule 32)

    $default	reduce using rule 32 (Step)



state 64

    AxisSpecifier  ->  AbbreviatedAxisSpecifier .   (rule 36)

    $default	reduce using rule 36 (AxisSpecifier)



state 65

    PredicateExpr  ->  Expr .   (rule 41)

    $default	reduce using rule 41 (PredicateExpr)



state 66

    FilterExpr  ->  PrimaryExpr .   (rule 65)
    FilterExpr  ->  PrimaryExpr . Predicate.list   (rule 66)

    '[' 	shift, and go to state 36

    $default	reduce using rule 65 (FilterExpr)

    Predicate.list	go to state 91
    Predicate	go to state 38



state 67

    PrimaryExpr  ->  FunctionCall .   (rule 53)

    $default	reduce using rule 53 (PrimaryExpr)



state 68

    UnionExpr  ->  UnionExpr . '|' PathExpr   (rule 60)
    UnaryExpr  ->  UnionExpr .   (rule 80)

    '|' 	shift, and go to state 92

    $default	reduce using rule 80 (UnaryExpr)



state 69

    UnionExpr  ->  PathExpr .   (rule 59)

    $default	reduce using rule 59 (UnionExpr)



state 70

    PathExpr  ->  FilterExpr .   (rule 62)
    PathExpr  ->  FilterExpr . '/' RelativeLocationPath   (rule 63)
    PathExpr  ->  FilterExpr . DOUBLE_SLASH RelativeLocationPath   (rule 64)

    DOUBLE_SLASH	shift, and go to state 93
    '/' 	shift, and go to state 94

    $default	reduce using rule 62 (PathExpr)



state 71

    Expr  ->  OrExpr .   (rule 48)
    OrExpr  ->  OrExpr . OR_OP AndExpr   (rule 68)

    OR_OP	shift, and go to state 95

    $default	reduce using rule 48 (Expr)



state 72

    OrExpr  ->  AndExpr .   (rule 67)
    AndExpr  ->  AndExpr . AND_OP EqualityExpr   (rule 70)

    AND_OP	shift, and go to state 96

    $default	reduce using rule 67 (OrExpr)



state 73

    AndExpr  ->  EqualityExpr .   (rule 69)
    EqualityExpr  ->  EqualityExpr . EQUALITY_OP RelationalExpr   (rule 72)

    EQUALITY_OP	shift, and go to state 97

    $default	reduce using rule 69 (AndExpr)



state 74

    EqualityExpr  ->  RelationalExpr .   (rule 71)
    RelationalExpr  ->  RelationalExpr . RELATIONAL_OP AdditiveExpr   (rule 74)

    RELATIONAL_OP	shift, and go to state 98

    $default	reduce using rule 71 (EqualityExpr)



state 75

    RelationalExpr  ->  AdditiveExpr .   (rule 73)
    AdditiveExpr  ->  AdditiveExpr . '+' MultiplicativeExpr   (rule 76)
    AdditiveExpr  ->  AdditiveExpr . '-' MultiplicativeExpr   (rule 77)

    '+' 	shift, and go to state 99
    '-' 	shift, and go to state 100

    $default	reduce using rule 73 (RelationalExpr)



state 76

    AdditiveExpr  ->  MultiplicativeExpr .   (rule 75)
    MultiplicativeExpr  ->  MultiplicativeExpr . MULTIPLICATIVE_OP UnaryExpr   (rule 79)

    MULTIPLICATIVE_OP	shift, and go to state 101

    $default	reduce using rule 75 (AdditiveExpr)



state 77

    MultiplicativeExpr  ->  UnaryExpr .   (rule 78)

    $default	reduce using rule 78 (MultiplicativeExpr)



state 78

    Predicate.list  ->  Predicate.list Predicate .   (rule 34)

    $default	reduce using rule 34 (Predicate.list)



state 79

    IdKeyPattern  ->  KEY_FUNCTION '(' Literal ',' Literal . ')'   (rule 12)

    ')' 	shift, and go to state 102



state 80

    NodeTest  ->  NodeType '(' Literal ')' .   (rule 39)

    $default	reduce using rule 39 (NodeTest)



state 81

    FunctionCall  ->  FunctionName '(' . ')'   (rule 54)
    FunctionCall  ->  FunctionName '(' . Argument.list ')'   (rule 55)

    Literal	shift, and go to state 43
    Number	shift, and go to state 44
    VariableReference	shift, and go to state 45
    FunctionName	shift, and go to state 46
    AxisName	shift, and go to state 47
    DOUBLE_DOT	shift, and go to state 48
    DOUBLE_SLASH	shift, and go to state 49
    '/' 	shift, and go to state 50
    '(' 	shift, and go to state 51
    ')' 	shift, and go to state 103
    '@' 	shift, and go to state 52
    '.' 	shift, and go to state 53
    '-' 	shift, and go to state 54

    $default	reduce using rule 47 (AbbreviatedAxisSpecifier)

    LocationPath	go to state 55
    AbsoluteLocationPath	go to state 56
    RelativeLocationPath	go to state 57
    Step	go to state 58
    AxisSpecifier	go to state 59
    AbbreviatedAbsoluteLocationPath	go to state 61
    AbbreviatedRelativeLocationPath	go to state 62
    AbbreviatedStep	go to state 63
    AbbreviatedAxisSpecifier	go to state 64
    Expr	go to state 104
    PrimaryExpr	go to state 66
    FunctionCall	go to state 67
    Argument.list	go to state 105
    Argument	go to state 106
    UnionExpr	go to state 68
    PathExpr	go to state 69
    FilterExpr	go to state 70
    OrExpr	go to state 71
    AndExpr	go to state 72
    EqualityExpr	go to state 73
    RelationalExpr	go to state 74
    AdditiveExpr	go to state 75
    MultiplicativeExpr	go to state 76
    UnaryExpr	go to state 77



state 82

    AxisSpecifier  ->  AxisName DOUBLE_COLON .   (rule 35)

    $default	reduce using rule 35 (AxisSpecifier)



state 83

    RelativeLocationPath  ->  RelativeLocationPath . '/' Step   (rule 28)
    AbbreviatedAbsoluteLocationPath  ->  DOUBLE_SLASH RelativeLocationPath .   (rule 42)
    AbbreviatedRelativeLocationPath  ->  RelativeLocationPath . DOUBLE_SLASH Step   (rule 43)

    DOUBLE_SLASH	shift, and go to state 87
    '/' 	shift, and go to state 88

    $default	reduce using rule 42 (AbbreviatedAbsoluteLocationPath)



state 84

    AbsoluteLocationPath  ->  '/' RelativeLocationPath .   (rule 25)
    RelativeLocationPath  ->  RelativeLocationPath . '/' Step   (rule 28)
    AbbreviatedRelativeLocationPath  ->  RelativeLocationPath . DOUBLE_SLASH Step   (rule 43)

    DOUBLE_SLASH	shift, and go to state 87
    '/' 	shift, and go to state 88

    $default	reduce using rule 25 (AbsoluteLocationPath)



state 85

    PrimaryExpr  ->  '(' Expr . ')'   (rule 50)

    ')' 	shift, and go to state 107



state 86

    UnionExpr  ->  UnionExpr . '|' PathExpr   (rule 60)
    UnaryExpr  ->  '-' UnionExpr .   (rule 81)

    '|' 	shift, and go to state 92

    $default	reduce using rule 81 (UnaryExpr)



state 87

    AbbreviatedRelativeLocationPath  ->  RelativeLocationPath DOUBLE_SLASH . Step   (rule 43)

    AxisName	shift, and go to state 47
    DOUBLE_DOT	shift, and go to state 48
    '@' 	shift, and go to state 52
    '.' 	shift, and go to state 53
